--- a/.github/workflows/feedback_entry.yaml
+++ b/.github/workflows/feedback_entry.yaml
@@ -1,28 +1,15 @@
-name: Check Python scripts
+name: Python Test
 on: [push]
 jobs:
-  test-python:
+  test:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v2
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v2
         with:
-          python-version: '3.10'
-      - name: Install expect
-        run: sudo apt-get update && sudo apt-get install expect -y
-      - name: Run script with expect
+          python-version: 3.9
+      - name: Run Python script
         run: |
-          expect -c "
-            spawn python your_script.py
-            expect \"Choose an option: \"
-            send \"1\r\"
-            expect \"Enter student name: \"
-            send \"John\r\"
-            expect \"Enter subject: \"
-            send \"Math\r\"
-            expect \"Enter choice (1-5): \"
-            send \"3\r\"
-            interact
-          "
+          python feedback_entry.py
